--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-config/local.exs
+settings
 dnsimple_elixir_cli
